# talarias

./: .gitignore  README.md  build.win-ja.json  icon.icns  install-mac.sh  install-win.bat  package-lock.json  package.json  vite.config.js
frontend/: about.html  about.js  index.html  renderer.js  styles.css  welcome.html  welcome.js
frontend/lib/: api.js
src/: about.html  index.html  main.js  preload-welcome.js  preload.js  renderer.js  styles.css  welcome.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
templates/BASH_SCRIPT/: Automation - Archive Old Logs.md  Automation - Backup Folder.md  Automation - Batch Add Prefix.md  Automation - Batch Add Suffix.md  Automation - Batch Rename Extension.md  Automation - Cleanup Temp Files.md  Automation - Delete Empty Files.md  Automation - Delete Empty Folders.md  Automation - Download File.md  Automation - Extract All Archives.md  Automation - Find Large Files.md  Automation - Monitor Disk Usage.md  Automation - Rotate Backups.md  Automation - Run Command On Schedule.md  Automation - Sync Two Folders.md  Automation - Watch File Changes.md  Data - Convert JSON Pretty.md  Data - Extract JSON Field.md  Data - Parse CSV Column.md  Data - URL Encode String.md  Files - Compare Two Folders.md  Files - Convert Line Endings.md  Files - Count Lines In Folder.md  Files - Hash Folder Contents.md  Files - Merge Text Files.md  Files - Rename Spaces To Underscores.md  (+31 more)
tools/: build-win-ja.cmd  build-win-ja.ps1  clean_templates.py
